Add proposal creating feature

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,14 +1,14 @@
 [features]
 seeds = false
 skip-lint = false
-[programs.localnet]
-hackathon = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+[programs.devnet]
+hackathon = "8mt8v8cLzM8NziTsZTbC7FzVpmZA5fWp297GjjLteWMB"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "/home/dds-019/.config/solana/id.json"
 
 [scripts]
